# squish

./: .cursorignore  .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: fonts.rs  lib.rs  main.rs
src/components/: canvas.tsx  header-toolbar.tsx  image-toolbar.tsx  layer-context-menu.tsx  layer-panel.tsx  layer-toolbar.tsx  segmentation-dialog.tsx  settings-dialog.tsx  text-toolbar.tsx
src/components/ui/: accordion.tsx  alert.tsx  badge.tsx  button.tsx  chart.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  radio-group.tsx  select.tsx  sheet.tsx  slider.tsx  sonner.tsx  switch.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx
src/lib/: db.ts  utils.ts
src/routes/: Playground.tsx  Welcome.tsx
src/types/: ProjectType.ts  SettingsType.ts  global.d.ts
